fixed padding and mobile bug for graphic design print section

--- a/portfolio.html
+++ b/portfolio.html
@@ -499,11 +499,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
           <p>Standalone creative pieces for events, campaigns, social media, and staff resources.</p>
         </div>
       </div>
-      <div class="row gy-4">
+      <div class="row gy-4 p-3">
         <!-- Carousel 1-->
-          <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="tile-wrapper position-relative">   
-              <div id="carouselAnnedel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-col col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative p-3">   
+              <div id="carouselAnnedel" class="carousel slide" >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/imgs/graphics/Annedel/carosel-01.png" class="d-block w-100 rounded" alt="Annedel Box Set Design Example 1">
@@ -522,11 +522,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                   </div>
                 </div>
                 <!-- Buttons and Overlay -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#designCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselAnnedel" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#designCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselAnnedel" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
@@ -548,9 +548,9 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
             </div>
           </div>         
         <!--Carousel 2-->
-          <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="tile-wrapper position-relative">   
-              <div id="carouselFuel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-col col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative p-3">   
+              <div id="carouselFuel" class="carousel slide" >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/imgs/graphics/FUEL/carosel_Artboard 4.png" class="d-block w-100 rounded" alt="Annedel Box Set Design Example 1">
@@ -569,11 +569,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                   </div>
                 </div>
                 <!-- Buttons and Overlay -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#designCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselFuel" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#designCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselFuel" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
@@ -595,9 +595,9 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
             </div>
           </div>        
         <!--Carousel 3-->
-          <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="tile-wrapper position-relative">   
-              <div id="carouselTgiFridays" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-col col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative p-3">   
+              <div id="carouselTgiFridays" class="carousel slide" >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/imgs/graphics/TGI_Fridays/carosel_Artboard 3.png" class="d-block w-100 rounded" alt="Annedel Box Set Design Example 1">
@@ -616,11 +616,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                   </div>
                 </div>
                 <!-- Buttons and Overlay -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#designCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselTgiFridays" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#designCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselTgiFridays" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
@@ -642,11 +642,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
             </div>
           </div>
       </div>
-      <div class="row gy-4">
+      <div class="row gy-4 p-3">
         <!-- Carousel 4-->
-          <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="tile-wrapper position-relative">   
-              <div id="carouselCoffee" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-col col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative p-3">   
+              <div id="carouselCoffee" class="carousel slide" >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/imgs/graphics/Chronical_Coffee/carosel_Artboard 2.png" class="d-block w-100 rounded" alt="Annedel Box Set Design Example 1">
@@ -671,11 +671,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                   </div>
                 </div>
                 <!-- Buttons and Overlay -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#designCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCoffee" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#designCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselCoffee" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
@@ -697,9 +697,9 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
             </div>
           </div>         
         <!--Carousel 5-->
-          <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="tile-wrapper position-relative">   
-              <div id="carouselAZFurnishing" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-col col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative p-3">   
+              <div id="carouselAZFurnishing" class="carousel slide" >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/imgs/graphics/Arizona Furnishing/carosel_Artboard 5.png" class="d-block w-100 rounded" alt="Annedel Box Set Design Example 1">
@@ -709,11 +709,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                   </div>
                 </div>
                 <!-- Buttons and Overlay -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#designCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselAZFurnishing" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#designCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselAZFurnishing" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
@@ -735,9 +735,9 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
             </div>
           </div>        
         <!--Carousel 6-->
-          <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="tile-wrapper position-relative">   
-              <div id="carouselVamp" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-col col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative p-3">   
+              <div id="carouselVamp" class="carousel slide" >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/imgs/graphics/vamp/carosel_Artboard 6 copy 3.png" class="d-block w-100 rounded" alt="Annedel Box Set Design Example 1">
@@ -756,11 +756,11 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                   </div>
                 </div>
                 <!-- Buttons and Overlay -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#designCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselVamp" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#designCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselVamp" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
