updated photography files for portfolio, updated photography header

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                 <img src="/imgs/web_development/Alvernon_donuts.png" alt="Alvernon Donuts" class="img-fluid project-img">
                 <div class="project-overlay">
                     <p class="project-description"><strong>Alvernon Donuts</strong><br />
-Although this project was submitted as part of my SheCodes curriculum, I chose to go beyond the assignment’s generic guidelines and design a site for a real local business—Alvernon Donuts. The business didn’t have a website, and I saw an opportunity to create something useful while pushing myself to apply real-world thinking. I handled the layout, styling, and responsive development using HTML, CSS, and Bootstrap, focusing on user experience and visual clarity. This project not only helped me fulfill the SheCodes criteria but also allowed me to approach web development from a more authentic, community-centered perspective.</p>
+                      Although this project was submitted as part of my SheCodes curriculum, I chose to go beyond the assignment’s generic guidelines and design a site for a real local business—Alvernon Donuts. The business didn’t have a website, and I saw an opportunity to create something useful while pushing myself to apply real-world thinking. I handled the layout, styling, and responsive development using HTML, CSS, and Bootstrap, focusing on user experience and visual clarity. This project not only helped me fulfill the SheCodes criteria but also allowed me to approach web development from a more authentic, community-centered perspective.</p>
                     <a href="https://alvernondonuts.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
                 </div>    
               </div>
@@ -782,6 +782,13 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
               </div>
             </div>
           </div>
+      </div>
+    </section>
+    <!--PHOTOGRAPHY-->
+    <section id="web-dev" class="media-section text-center py-4" style="background-color: #6f42c1;">
+      <div class="container text-center py-3">
+        <img src="/imgs/photography/Photography.png" alt="JPCW Photography Logo" class="img-fluid mb-2" style="max-width: 200px;">
+        <h2 class="text-white">Photography</h2>
       </div>
     </section>
     <!--
