updated portfolio hero with nav buttons and intro content, moved resume button up

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,19 +37,57 @@
   </nav>
   <header></header>
   <main>
-    <section id="web-dev" class="media-section text-center py-4" style="background-color: #6f42c1;">
+    <section id="portfolio-hero" class="media-section text-center py-4" style="background-color: #6f42c1;">
       <div class="container text-center py-3">
         <img src="/imgs/portfolio.png" alt="JP Creative Works Portfolio" class="img-fluid mb-3" style="max-width: 200px;">
         <h1 class="mb-3" style="color: #ffffff">My Portfolio</h1>
       </div>
     </section>
     <section class="light-bg py-5">
-        <p class="lead mx-auto" style="max-width: 800px;">
-          Welcome to my portfolio! This section highlights my web development projects where I’ve applied a range of tools like HTML, CSS, JavaScript, and Bootstrap, often going beyond the original scope to create something more purposeful and user-centered. I'm currently in the process of building out dedicated sections for my <strong>graphic design, videography, and photography</strong> work, so stay tuned!
-        </p>
-        <div class="d-flex justify-content-center">
-          <a href="/imgs/Resume_Bencriscutto.pdf" target="_blank" class="btn btn-outline-primary mt-3 resume-btn"><i class="bi bi-download me-2"></i>View My Resume
-          </a>
+      <div class="container">
+          <p class="lead text-center intro-copy mx-auto mb-2">
+            I build work that makes people <em>feel something</em>, seen, proud, invited in.  
+            Whether it’s a website that feels effortless, a catalog that clarifies the path,
+            or a film that turns policy into story, my goal is the same: craft with care.
+            Every project below starts with empathy and ends with something useful, beautiful,
+            and easy to use.        
+          </p>
+          <div class="text-center">
+            <a href="/imgs/Resume_Bencriscutto.pdf" target="_blank" class="btn resume-btn">
+              <i class="bi bi-download me-2"></i>View My Resume
+            </a>
+          </div>
+          <div class="section-nav d-flex flex-wrap justify-content-center gap-2 mt-3">
+            <div class="row g-2 g-sm-3 justify-content-center">
+              <div class="col-6 col-md-auto d-flex">
+                <a href="#web-dev" class="btn section-btn section-btn-img w-100">
+                  <img src="/imgs/web_development/Web Development.png" alt="" class="section-icon" loading="lazy">
+                  <span>Web Development</span>
+                </a>
+              </div>
+
+              <div class="col-6 col-md-auto d-flex">
+                <a href="#video" class="btn section-btn section-btn-img w-100">
+                  <img src="/imgs/video/Videography.png" alt="" class="section-icon" loading="lazy">
+                  <span>Videography</span>
+                </a>
+              </div>
+
+              <div class="col-6 col-md-auto d-flex">
+                <a href="#graphics" class="btn section-btn section-btn-img w-100">
+                  <img src="/imgs/graphics/Graphic Design.png" alt="" class="section-icon" loading="lazy">
+                  <span>Graphic Design</span>
+                </a>
+              </div>
+
+              <div class="col-6 col-md-auto d-flex">
+                <a href="#photography" class="btn section-btn section-btn-img w-100">
+                  <img src="/imgs/photography/Photography.png" alt="" class="section-icon" loading="lazy">
+                  <span>Photography</span>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
     </section>
     <!--WEB DEVELOPMENT-->
@@ -59,7 +97,6 @@
         <h2 class="text-white">Web Development</h2>
       </div>
     </section>
-
     <section>
       <div class="light-bg py-4">
         <div class="container">
@@ -372,23 +409,6 @@
             </div>
           </div>
           </div>
-          <!--Video cut-->
-          <!--<div class="col-md-6 col-lg-4 mb-4 project-tile">
-            <div class="tile-wrapper">
-              <a href="https://youtu.be/ea7nrytl-ls?si=p0XG2kYC4u0u9R4R" target="_blank" class="video-thumbnail-link">
-                <img src="/imgs/video/kingme sc.png" alt="King Me - Ep1" class="project-img">
-              </a>
-              <div class="project-overlay">
-                <div class="overlay-content">
-                  <p class="project-description">
-                    <strong>King Me: Rise of A Drag King</strong><br>
-                    A dynamic YouTube competition series spotlighting Drag Kings from across the country. I joined during its launch and helped grow the channel to nearly 2,000 followers. For Season 1 (7 episodes), I edited all submissions in Adobe Premiere Pro, created promotional content in iMovie, and designed the intro animation in After Effects, backed by music from Jayyvon Monroe.
-                  </p>
-                  <a href="https://youtu.be/ea7nrytl-ls?si=p0XG2kYC4u0u9R4R" target="_blank" class="overlay-btn">Visit YouTube</a>
-                </div>
-              </div>
-            </div>
-          </div>-->
         </div>
       </div>
     </section>
@@ -1136,7 +1156,7 @@
                   <div class="overlay-content">
                     <p class="project-description">
                       <strong>Lifestyle Photography</strong><br>
-                      Captured in St. Louis, MO (2014)<br />
+                      Captured in Anne Arundel, MD (2012)<br />
                       © Jenn Bencriscutto | JP Creative Works | All rights reserved
                     </p>
                   </div>
