added a back to top navigation button in portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,11 @@
     <section>
       <div class="light-bg py-4">
         <div class="container">
+          <div class="section-stick">
+            <a href="#portfolio-hero" class="btn btn-top">
+              <i class="bi bi-arrow-up-short"></i><span class="label">Back to top</span>
+            </a>
+          </div>
           <div class="row justify-content-center mt-4">
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
@@ -219,6 +224,11 @@
     <section>
       <div class="light-bg py-4">
         <div class="container">
+          <div class="section-stick">
+            <a href="#portfolio-hero" class="btn btn-top">
+              <i class="bi bi-arrow-up-short"></i><span class="label">Back to top</span>
+            </a>
+          </div>
           <div class="row justify-content-center mt-4">
 
             <!-- Video 1 -->
@@ -422,6 +432,11 @@
     <!-- INTERACTIVE CATALOGS SUBSECTION -->
     <section class="light-bg py-5">
       <div class="container">
+        <div class="section-stick">
+            <a href="#portfolio-hero" class="btn btn-top">
+              <i class="bi bi-arrow-up-short"></i><span class="label">Back to top</span>
+            </a>
+          </div>
         <div class="text-center mb-4">
           <h3 class="text-uppercase" style="color: #6f42c1; font-weight: bold;">Program and Catalog Design</h3>
           <p>
@@ -814,6 +829,11 @@
     <section>
       <div class="light-bg py-5">
         <div class="container">
+          <div class="section-stick">
+            <a href="#portfolio-hero" class="btn btn-top">
+              <i class="bi bi-arrow-up-short"></i><span class="label">Back to top</span>
+            </a>
+          </div>
           <div class="row gy-4 pb-4">
             <!--Photo 1-->
             <div class="col-12 col-lg-4 d-flex justify-content-center">
