added my react weather app to the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -190,11 +190,11 @@
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
-                <img src="/imgs/web_development/SheCodes the Weather.png" alt="Shecodes Weather API" class="img-fluid project-img">
+                <img src="/imgs/web_development/react weather.png" alt="React.JS Weather API" class="img-fluid project-img">
                 <div class="project-overlay">
-                  <p class="project-description"><strong>SheCodes Weather App</strong><br />This was my first major weather API project using HTML, CSS, and JavaScript. I customized it to shift colors at sunrise and sunset, adding a unique user experience beyond the basic template. This project deepened my skills in API integration and time-based styling.</p>
+                  <p class="project-description"><strong>React.JS Weather App</strong><br />This was my first successful deployment of a React.JS Website with working Weather API. I customized it to toggle between celcius and fahrenheit. This project deepened my skills in API integration and React coding.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
-                    <a href="https://shecodes-the-weather.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                    <a href="https://jpcw-react-weather-app.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
                   </div>
                 </div>
               </div>
