fixed responsive bugs and back to top z index issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
         <h2 class="text-white">Web Development</h2>
       </div>
     </section>
-    <section>
+    <section id="web-dev-content">
       <div class="light-bg py-4">
         <div class="container">
           <div class="section-stick">
@@ -110,7 +110,9 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/Alvernon_donuts.png" alt="Alvernon Donuts" class="img-fluid project-img">
                 <div class="project-overlay">
-                    <p class="project-description"><strong>Alvernon Donuts</strong><br />
+                    <p class="project-title"><strong>Alvernon Donuts</strong></p>
+                    <p class="project-description">
+                      <strong>Alvernon Donuts</strong><br />
                       Although this project was submitted as part of my SheCodes curriculum, I chose to go beyond the assignment’s generic guidelines and design a site for a real local business—Alvernon Donuts. The business didn’t have a website, and I saw an opportunity to create something useful while pushing myself to apply real-world thinking. I handled the layout, styling, and responsive development using HTML, CSS, and Bootstrap, focusing on user experience and visual clarity. This project not only helped me fulfill the SheCodes criteria but also allowed me to approach web development from a more authentic, community-centered perspective.</p>
                     <a href="https://alvernondonuts.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
                 </div>    
@@ -120,6 +122,7 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/AI Guidelines.png" alt="AI Guidelines for School District" class="img-fluid project-img">
                 <div class="project-overlay">
+                  <p class="project-title"><strong>TUSD AI Guidelines</strong></p>
                   <p class="project-description"><strong>TUSD AI Guideslines</strong><br />This site redesign project was created as part of Tucson Unified School District’s AI Taskforce. The original page lacked structure and clarity, so I took the initiative to rebuild it with a cleaner layout and unified messaging to better educate staff and families about AI.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
                     <a href="https://ai-guidelines.netlify.app/" target="_blank" class="overlay-btn">View Redesigned Site</a>
@@ -132,7 +135,8 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/API_Weather_app.png" alt="What's the Weather App" class="img-fluid project-img">
                 <div class="project-overlay">
-                  <p class="project-description"><strong>What's The Weather App</strong><br />For this SheCodes assignment, I challenged myself to integrate a third-party API from Weatherbit.io that was beyond what was offered in the curriculum. I also reimagined the typical weather app layout by designing a curved, window-like interface to simulate the experience of looking out at the weather.</p>
+                  <p class="project-title"><strong>What's the Weather App</strong></p>
+                  <p class="project-description"><strong>What's the Weather App</strong><br />For this SheCodes assignment, I challenged myself to integrate a third-party API from Weatherbit.io that was beyond what was offered in the curriculum. I also reimagined the typical weather app layout by designing a curved, window-like interface to simulate the experience of looking out at the weather.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
                     <a href="https://wtweatherapp.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
                   </div>
@@ -156,6 +160,7 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/Time Globe.png" alt="Time Globe" class="img-fluid project-img">
                 <div class="project-overlay">
+                  <p class="project-title"><strong>Time Globe</strong></p>
                   <p class="project-description"><strong>Time Globe</strong><br />Time Globe was a focused JavaScript project designed to display live, location-specific time across multiple cities. I implemented both moment.js and moment-timezone to handle real-time updates and international time zones. My biggest challenge was integrating the dynamic time updates with user interaction, but solving it helped sharpen my understanding of asynchronous behavior in JavaScript and DOM manipulation. The sleek, responsive interface also reflects my dedication to clean, functional design.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
                     <a href="https://timeglobe-foralltime.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
@@ -167,7 +172,8 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/JPs_feathered_friends.png" alt="JPs Feathered Friends Aviary Website" class="img-fluid project-img">
                 <div class="project-overlay">
-                  <p class="project-description"><strong>JP's Feather Friends</strong><br />This is a passion project turned professional site, built to support my aviary business and showcase my creative coding style. I designed a fully responsive layout that works seamlessly across devices and implemented SEO best practices to help the site perform well in search engines. The site also features original vector artwork of my Green Cheek Conures, Sherbert and Einstein, created in Adobe Illustrator to give the brand a playful and personal touch.</p>
+                  <p class="project-title"><strong>JP's Feathered Friends</strong></p>
+                  <p class="project-description"><strong>JP's Feathered Friends</strong><br />This is a passion project turned professional site, built to support my aviary business and showcase my creative coding style. I designed a fully responsive layout that works seamlessly across devices and implemented SEO best practices to help the site perform well in search engines. The site also features original vector artwork of my Green Cheek Conures, Sherbert and Einstein, created in Adobe Illustrator to give the brand a playful and personal touch.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
                     <a href="https://jps-feathered-friends.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
                   </div>
@@ -181,6 +187,7 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/AI_Python_Travel_Planner.png" alt="Python AI Travel Planner" class="img-fluid project-img">
                 <div class="project-overlay">
+                  <p class="project-title"><strong>AI Travel Planner</strong></p>
                   <p class="project-description"><strong>AI Travel Planner</strong><br />AI Travel Planner was developed in Google Colab using Python and SheCodes AI integration. The project generates a personalized travel itinerary based on user responses, including destination, dates, and budget, and returns estimated costs, weather, and transportation options. Users interact with the notebook by clicking “Run” and answering prompts. One key challenge was ensuring consistency across a wide range of destinations. This project strengthened my skills in Python and deepened my interest in using code to solve real-world problems.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
                     <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
@@ -192,6 +199,7 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/react weather.png" alt="React.JS Weather API" class="img-fluid project-img">
                 <div class="project-overlay">
+                  <p class="project-title"><strong>React.JS Weather App</strong></p>
                   <p class="project-description"><strong>React.JS Weather App</strong><br />This was my first successful deployment of a React.JS Website with working Weather API. I customized it to toggle between celcius and fahrenheit. This project deepened my skills in API integration and React coding.</p>
                   <div class="d-flex gap-2 justify-content-center flex-wrap">
                     <a href="https://jpcw-react-weather-app.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
@@ -203,6 +211,7 @@
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/COVID_Plot_Graph_Python.png" alt="Global Covid Plot Graph with Python" class="img-fluid project-img">
                 <div class="project-overlay">
+                  <p class="project-title"><strong>Global COVID Plot Graph</strong></p>
                 <p class="project-description"><strong>Global COVID Plot Graph</strong><br />a Python project hosted on Replit, where I gathered and analyzed global COVID-19 data. I used Python’s plotting libraries to visualize the data and highlight international trends. Users can run the script and view the results in a separate console window. This project reflects my interest in meaningful data storytelling and using Python for real-world impact.</p>
                 <div class="d-flex gap-2 justify-content-center flex-wrap">
                   <a href="https://replit.com/@jpcreativeworks/SheCodesFinalProject#main.py" target="_blank" class="overlay-btn">Run Code</a>
@@ -221,7 +230,7 @@
         <h2 class="text-white">Videography</h2>
       </div>
     </section>
-    <section>
+    <section id="video-content">
       <div class="light-bg py-4">
         <div class="container">
           <div class="section-stick">
