fixed layout bugs during responsive range of 767 - 991 px

--- a/portfolio.html
+++ b/portfolio.html
@@ -249,6 +249,7 @@
                 </video>
                 <div class="project-overlay">
                   <div class="overlay-content">
+                    <p class="project-title"><strong>Project Signed: Freedom</strong></p>
                     <p class="project-description">
                     <strong>Project Signed: Freedom</strong><br>
                       An artistic ASL interpretation of “Freedom” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Andrew Tolman, with choreography by Divine. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
@@ -268,7 +269,7 @@
                 <div class="project-overlay">
                   <div class="overlay-content">
                     <p class="project-description">
-                    <strong>Project Signed: Freedom</strong><br>
+                    <strong>Project Signed: Formation</strong><br>
                       An artistic ASL interpretation of “Formation” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
                     </p>
                     <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
@@ -286,7 +287,7 @@
                 <div class="project-overlay">
                   <div class="overlay-content">
                     <p class="project-description">
-                    <strong>Project Signed: Freedom</strong><br>
+                    <strong>Project Signed: Forward</strong><br>
                       An artistic ASL interpretation of “Forward” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Cornelious Poston. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
                     </p>
                     <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
@@ -439,7 +440,7 @@
       </div>
     </section>
     <!-- INTERACTIVE CATALOGS SUBSECTION -->
-    <section class="light-bg py-5">
+    <section id="graphics-catalog" class="light-bg py-5">
       <div class="container">
         <div class="section-stick">
             <a href="#portfolio-hero" class="btn btn-top">
